--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="has-background-white has-text-black">
+<html lang="pt-br">
+<!-- class="has-background-white has-text-black" -->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
